--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
     environment:
       # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
-      - SERVICES=lambda
+      - SERVICES=lambda,s3,logs,dynamodb,cloudwatch,apigateway,cloudformation,iam,events
       - DEBUG=${DEBUG:-0}
     volumes:
-      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "~/tmp:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
