--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "license": "ISC",
   "author": "Mateja",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "express": "^5.2.1"
+  "devDependencies": {
+    "serverless": "^3.40.0",
+    "serverless-localstack": "^1.3.1"
   }
 }
