--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,11 @@ services:
     environment:
       # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
       - SERVICES=lambda,s3,logs,dynamodb,cloudwatch,apigateway,cloudformation,iam,events
+      - DOCKER_HOST=unix:///var/run/docker.sock
       - DEBUG=${DEBUG:-0}
     volumes:
-      - "~/tmp:/var/lib/localstack"
+      - localstack_data:/var/lib/localstack
       - "/var/run/docker.sock:/var/run/docker.sock"
+
+volumes:
+  localstack_data:
