--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "Mateja",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy-frontend": "S3_BUCKET_NAME=${npm_config_s3_bucket_name:-punjaci-website} && awslocal s3 sync ./web s3://$S3_BUCKET_NAME",
+    "deploy-frontend-fixed-bucket": "awslocal s3 sync ./web s3://punjaci-website",
+    "redeploy": "docker-compose down -v && docker-compose up -d && sleep 5 && npx serverless deploy"
   },
   "devDependencies": {
     "serverless": "^3.40.0",
-    "serverless-localstack": "^1.3.1"
+    "serverless-localstack": "^1.3.1",
+    "@aws-sdk/client-dynamodb": "^3.972.0",
+    "@aws-sdk/lib-dynamodb": "^3.972.0"
   }
 }
